algunos cambios, aun no se guardan los conductores en la base